force-app/main/default/objects/RAID__c/RAID__c.object-meta.xml
<CustomObject>
    <description>Risks / Actions / Issues / Decisions
As controled by the project team</description>
    <label>RAID</label>
    <nameField>
        <displayFormat>RID-{0000}</displayFormat>
        <label>RAID ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RAID</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>