force-app/main/default/objects/RAID__c/fields/Impact_on_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Impact_on_Schedule__c</fullName>
    <label>Impact on Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>