force-app/main/default/objects/RAID__c/fields/Next_Action_Description__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Description__c</fullName>
    <label>Next Action Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>