force-app/main/default/objects/RAID__c/fields/Next_Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Action Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RAID_owner</relationshipName>
    <type>Lookup</type>
</CustomField>