force-app/main/default/objects/RAID__c/fields/Next_Action_Required_By__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Required_By__c</fullName>
    <label>Next Action Required By</label>
    <type>Date</type>
</CustomField>