force-app/main/default/objects/RAID__c/fields/Originator__c.field-meta.xml
<CustomField>
    <fullName>Originator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person who raised this RAID</inlineHelpText>
    <label>Originator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RAID</relationshipName>
    <type>Lookup</type>
</CustomField>