force-app/main/default/objects/RAID__c/fields/RAID_Type__c.field-meta.xml
<CustomField>
    <fullName>RAID_Type__c</fullName>
    <inlineHelpText>Select the appropriate type</inlineHelpText>
    <label>RAID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Risk</fullName>
                <default>true</default>
                <label>Risk</label>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>