force-app/main/default/objects/RAID__c/validationRules/Date_closed_must_be_after_date_opened.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_closed_must_be_after_date_opened</fullName>
    <active>true</active>
    <description>Date closed must be after date opened</description>
    <errorConditionFormula>Date_Closed__c &lt; Opened_Date__c</errorConditionFormula>
    <errorDisplayField>Date_Closed__c</errorDisplayField>
    <errorMessage>Date closed must be on or after date opened</errorMessage>
</ValidationRule>