force-app/main/default/objects/RAID__c/validationRules/If_status_is_closed_enter_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>If_status_is_closed_enter_reason</fullName>
    <active>true</active>
    <description>If status is closed enter reason</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Closed&quot;), Reason_For_Closure__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Reason_For_Closure__c</errorDisplayField>
    <errorMessage>If status is closed enter reason</errorMessage>
</ValidationRule>