force-app/main/default/objects/RAID__c/validationRules/If_status_set_to_closed_enter_close_date.validationRule-meta.xml
<ValidationRule>
    <fullName>If_status_set_to_closed_enter_close_date</fullName>
    <active>true</active>
    <description>If status set to closed enter close date</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Closed&quot;) , ISNULL(Date_Closed__c) )</errorConditionFormula>
    <errorDisplayField>Date_Closed__c</errorDisplayField>
    <errorMessage>If status set to closed enter close date</errorMessage>
</ValidationRule>