force-app/main/default/objects/RAID__c/listViews/All_RAIDs.listView-meta.xml
<ListView>
    <fullName>All_RAIDs</fullName>
    <columns>NAME</columns>
    <columns>RAID_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Originator__c</columns>
    <columns>Opened_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Next_Action_Required_By__c</columns>
    <columns>Next_Action_Description__c</columns>
    <columns>Next_Action_Owner__c</columns>
    <columns>Date_Closed__c</columns>
    <columns>Reason_For_Closure__c</columns>
    <filterScope>Everything</filterScope>
    <label>All RAIDs</label>
</ListView>